// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly creates default environment in dev mode.: env properties 1`] = `
Env {
  "binDir": "/test/cwd/bin",
  "cliArgs": Object {
    "dev": true,
    "someArg": 1,
    "someOtherArg": "2",
  },
  "configDir": "/test/cwd/config",
  "configs": Array [
    "/test/cwd/config/kibana.yml",
  ],
  "corePluginsDir": "/test/cwd/core_plugins",
  "homeDir": "/test/cwd",
  "isDevClusterMaster": true,
  "legacy": EventEmitter {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "domain": null,
  },
  "logDir": "/test/cwd/log",
  "mode": Object {
    "dev": true,
    "name": "development",
    "prod": false,
  },
  "packageInfo": Object {
    "branch": "some-branch",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "version": "some-version",
  },
  "staticFilesDir": "/test/cwd/ui",
}
`;

exports[`correctly creates default environment in prod distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/cwd/bin",
  "cliArgs": Object {
    "dev": false,
    "someArg": 1,
    "someOtherArg": "2",
  },
  "configDir": "/test/cwd/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "corePluginsDir": "/test/cwd/core_plugins",
  "homeDir": "/test/cwd",
  "isDevClusterMaster": false,
  "legacy": EventEmitter {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "domain": null,
  },
  "logDir": "/test/cwd/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "version": "v1",
  },
  "staticFilesDir": "/test/cwd/ui",
}
`;

exports[`correctly creates default environment in prod non-distributable mode.: env properties 1`] = `
Env {
  "binDir": "/test/cwd/bin",
  "cliArgs": Object {
    "dev": false,
    "someArg": 1,
    "someOtherArg": "2",
  },
  "configDir": "/test/cwd/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "corePluginsDir": "/test/cwd/core_plugins",
  "homeDir": "/test/cwd",
  "isDevClusterMaster": false,
  "legacy": EventEmitter {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "domain": null,
  },
  "logDir": "/test/cwd/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 9007199254740991,
    "buildSha": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
    "version": "v1",
  },
  "staticFilesDir": "/test/cwd/ui",
}
`;

exports[`correctly creates environment with constructor.: env properties 1`] = `
Env {
  "binDir": "/some/home/dir/bin",
  "cliArgs": Object {
    "dev": false,
    "someArg": 1,
    "someOtherArg": "2",
  },
  "configDir": "/some/home/dir/config",
  "configs": Array [
    "/some/other/path/some-kibana.yml",
  ],
  "corePluginsDir": "/some/home/dir/core_plugins",
  "homeDir": "/some/home/dir",
  "isDevClusterMaster": false,
  "legacy": EventEmitter {
    "_events": Object {},
    "_eventsCount": 0,
    "_maxListeners": undefined,
    "domain": null,
  },
  "logDir": "/some/home/dir/log",
  "mode": Object {
    "dev": false,
    "name": "production",
    "prod": true,
  },
  "packageInfo": Object {
    "branch": "feature-v1",
    "buildNum": 100,
    "buildSha": "feature-v1-build-sha",
    "version": "v1",
  },
  "staticFilesDir": "/some/home/dir/ui",
}
`;
